# HelixNebula

./: .gitignore  CMakeLists.txt  CMakePresets.json
raytracer/: config.h  glm_config.h  main.cpp
raytracer/acceleration/: bvh.h  bvh.tpp
raytracer/camera/: base_camera.cpp  base_camera.h  distribution_camera.cpp  distribution_camera.h  pinhole_camera.cpp  pinhole_camera.h
raytracer/core/: aabb.cpp  aabb.h  color.h  hittable.h  interval.h  ray.cpp  ray.h
raytracer/include/: aabb.h  bvh.h  color.h  config.h  hittable.h  interval.h  parser.hpp  ray.h  vec3.h
raytracer/io/: image_io.cpp  image_io.h  save_image.cpp  save_image.h
raytracer/light/: light.h
raytracer/material/: material.cpp  material.h  material_manager.cpp  material_manager.h
raytracer/math_core/: definitions.h  math_core.h  vector_utility.h
raytracer/math_core/random/: my_random.cpp  my_random.h
raytracer/math_core/transformations/: transformations.cpp  transformations.h
raytracer/objects/: geometry.h  geometry_concepts.h  mesh.cpp  mesh.h  mesh.tpp  plane.cpp  plane.h  sphere.h  tlas_box.cpp  tlas_box.h  triangle.h
raytracer/objects/triangle/: triangle_base.h
raytracer/parser/: config.h  parser.cpp  parser.hpp
raytracer/random/: my_random.cpp  my_random.h
raytracer/render/: base_ray_tracer.cpp  base_ray_tracer.h  pathtracer.cpp  pathtracer.h  raytracer.cpp  raytracer.h  render_manager.cpp  render_manager.h  rendercontext.h  rendering_technique.h
raytracer/scene/: scene.cpp  scene.h
raytracer/src/: aabb.cpp  bvh.cpp  main.cpp  parser.cpp  ray.cpp
raytracer/texture_mapping/: perlin.h  texture_data.cpp  texture_data.h  texture_fetcher.cpp  texture_fetcher.h  texture_lookup.cpp  texture_lookup.h  type_structs.h
raytracer/tonemapping/: tonemapping.cpp  tonemapping.h
